# fuckcaps

./: .gitignore  CMakeLists.txt  FUCKCAPS.md  README.md
.cache/clangd/index/: key_remapper_interface.hpp.1F6F41C5AD8D1B56.idx  macos_exception_handling.cpp.7D7AB61E9BBF3DD1.idx  macos_exception_handling.hpp.43E80396B0A89F85.idx  macos_exception_handling.hpp.9465E5C7F373B84C.idx  macos_key_remapper.cpp.92D8D3FFDD1D07DD.idx  macos_key_remapper.hpp.A3C9B9BEE9CF29DE.idx  macos_key_remapper.hpp.D8E1D8B33DAFF29D.idx  macos_shortcut_handler.cpp.8F24B64455930C1B.idx  macos_shortcut_handler.hpp.BE5E103112FDDC34.idx  macos_shortcut_handler.hpp.EEE20D7052434F89.idx  macos_utils.cpp.2D1BA0AC2A0E3BE7.idx  macos_utils.hpp.CD2FD2D1BC50C541.idx  macos_virtual_keycodes.cpp.8CB6FC5080467595.idx  macos_virtual_keycodes.hpp.2F2565AAE51294F9.idx  macos_virtual_keycodes.hpp.977DB0A17E89FF5B.idx  macos_yaml_handler.cpp.2B33352AF05043E2.idx  macos_yaml_handler.hpp.5148005C884A2783.idx  macos_yaml_handler.hpp.C73499D1113A7640.idx  main.cpp.9DE22038D1B048E1.idx  terminal_ui_handler.cpp.9DD6D03248DD1C37.idx  terminal_ui_handler.hpp.F25202F051FC5104.idx  unix_config_setup.cpp.D85C9F4BA5B69676.idx  unix_config_setup.hpp.DF0BA03412DF016E.idx  yaml_handler.cpp.5DA18C3669341C61.idx  yaml_handler.hpp.E564258C6EEB7AE8.idx
include/macos/: macos_exception_handling.hpp  macos_key_remapper.hpp  macos_shortcut_handler.hpp  macos_virtual_keycodes.hpp  macos_yaml_handler.hpp
src/: .null-ls_137471_capsState.cpp  .null-ls_264382_main.cpp  .null-ls_774567_main.hpp  main.cpp
src/common/: key_remapper_interface.hpp  terminal_ui_handler.cpp  terminal_ui_handler.hpp  unix_config_setup.cpp  unix_config_setup.hpp  yaml_handler.cpp  yaml_handler.hpp
src/macos/: macos_exception_handling.cpp  macos_key_remapper.cpp  macos_shortcut_handler.cpp  macos_virtual_keycodes.cpp  macos_yaml_handler.cpp
src/models/: key_configs.yaml
